Большой рефакторинг, добавил кафку для аналитики, поправил документацию а так же был добавлен новый эндпоинт для аналитики
